tests/specs/ecosystem/denosaurs/byte_type/0_4_0.test
denosaurs/byte-type/0.4.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<T[]>'.
  read(dt: DataView, options?: Options): T[] {
  ~~~~
    at file://<tmpdir>/src/array/array.ts:9:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<T[]>'.
  write(value: T[], dt: DataView, options?: Options): void {}
  ~~~~~
    at file://<tmpdir>/src/array/array.ts:13:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<V>'.
  read(dt: DataView, options?: Options): V {
  ~~~~
    at file://<tmpdir>/src/compound/struct.ts:13:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<V>'.
  write(value: V, dt: DataView, options?: Options): void {}
  ~~~~~
    at file://<tmpdir>/src/compound/struct.ts:17:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<V>'.
  read(dt: DataView, options?: Options): V {
  ~~~~
    at file://<tmpdir>/src/compound/tagged_union.ts:20:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<V>'.
  write(variant: V, dt: DataView, options?: Options): void {}
  ~~~~~
    at file://<tmpdir>/src/compound/tagged_union.ts:24:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<V>'.
  read(dt: DataView, options?: Options): V {
  ~~~~
    at file://<tmpdir>/src/compound/tuple.ts:13:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'UnsizedType<V>'.
  write(value: V, dt: DataView, options?: Options): void {}
  ~~~~~
    at file://<tmpdir>/src/compound/tuple.ts:17:3

Found 8 errors.

error: Type checking failed.

